--- a/canvas.css
+++ b/canvas.css
@@ -46,7 +46,7 @@ ul{
   }
 .palette{
   position: absolute;
-  top: 50px;
+  top: 70px;
   left: 17px;
   display: inline-block;
 }
@@ -71,7 +71,7 @@ ul{
 .width{
   position: fixed;
   display: flex;
-  right: 8px;;
+  left: 200px;
   top: 14px;
   width: 50%;
   justify-content: center;
@@ -112,4 +112,18 @@ ul{
   box-shadow: 0px 0px 23px -5px rgba(0,0,0,0.75);
   transform: scale(1.2);
   transition: 0.3s;
+}
+.wrapButton{
+  position: fixed;
+  left: 113px;
+  top: 10px;
+}
+.wrapButton>#recovery{
+  width: 2em;
+  height: 2em;
+}
+.wrapButton>#download{
+  width: 2em;
+  height: 2em;
+  margin-left: 12px;
 }
